layout & style filters. Bugs: checkbox checked color, align items

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -19,8 +19,8 @@ header {
 
 .logo {
   position: absolute;
-  left: 0%;
-  right: 80.28%;
+  left: 4.17%;
+  right: 84.17%;
   top: 0%;
   bottom: 0%;
 }
@@ -89,6 +89,71 @@ header nav div a:hover {
   top: 100%;
   bottom: 0%;
   border: 1px solid #3D444E;
+}
+
+.filters {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  width: 900px;
+  height: 69px;
+  left: 60px;
+  top: 108px;
+  justify-content: space-evenly;
+}
+
+.filters_section {
+  width: 150px;
+  color: #B6B4C6;
+  align-self: center;
+}
+
+.select_text {
+  background-color: #242B35;
+  color: #B6B4C6;
+  border: 1px solid #B6B4C6;
+  border-radius: 4px;
+  padding: 10px 12px;
+  width: 100%;
+  margin: 8px 0;
+  top: 137px;
+}
+
+.select_num {
+  background-color: #242B35;
+  color: #B6B4C6;
+  border: 1px solid #B6B4C6;
+  border-radius: 4px;
+  padding: 10px 12px;
+  width: 100%;
+  margin: 8px 0;
+  top: 137px;
+}
+
+.btn_apply {
+  width: 96px;
+  height: 40px;
+  background: #8F7FFF;
+  color: #FFFFFF;
+  border-radius: 7px;
+  padding: 8px 28px;
+}
+
+.btn_reset {
+  width: 143px;
+  height: 40px;
+  border: 1px solid #8F7FFF;
+  background: #171E28;
+  color: #8F7FFF;
+  box-sizing: border-box;
+  border-radius: 7px;
+  padding: 8px 28px;
+}
+
+input:checked {
+  background-color: #8F7FFF;
+  color: #FFFFFF;
 }
 
 .decor {
